update UITests